--- a/views/game.html
+++ b/views/game.html
@@ -20,20 +20,24 @@
         },
         scene: {
             preload: preload,
-            create: create
+            create: create,
+            update: update
         }
     };
 
     const game = new Phaser.Game(config);
-    let cursors;
-    let player;
-    let showDebug = false;
+    var cursors;
+    var player;
+    var showDebug = false;
 
     function preload ()
     {
         this.load.image("tiles", "/scenery/roguelikeSheet_transparent.png");
         this.load.tilemapTiledJSON("map", "/map/level1.json");
+        //Loading atlas
+        this.load.atlas("atlas", "/atlas/atlas.png", "/atlas/atlas.json");
     }
+
 
     function create() {
         const map       = this.make.tilemap({ key: "map" }),
@@ -49,46 +53,94 @@
         foliageLayer.setCollisionByProperty({ collides: true });
 
 
-        const spawnPoint = map.findObject("Objects", obj => obj.name == "Spawn Point");
+        const spawnPoint = map.findObject("Spawn", obj => obj.name == "Spawn Point");
 
-        const player = this.physics.add
-        .sprite(spawnPoint.x, spawnPoint.y, "/characters/roguelikeChar_transparent.png");
+        player = this.physics.add.sprite(spawnPoint.x, spawnPoint.y, "atlas", "misa-front").setSize(30, 40).setOffset(0, 24);
 
         this.physics.add.collider(player, foliageLayer);
+
+          // Create the player's walking animations from the texture atlas.
+          const anims = this.anims;
+          anims.create({
+            key: "misa-left-walk",
+            frames: anims.generateFrameNames("atlas", { prefix: "misa-left-walk.", start: 0, end: 3, zeroPad: 3 }),
+            frameRate: 10,
+            repeat: -1
+          });
+          anims.create({
+            key: "misa-right-walk",
+            frames: anims.generateFrameNames("atlas", { prefix: "misa-right-walk.", start: 0, end: 3, zeroPad: 3 }),
+            frameRate: 10,
+            repeat: -1
+          });
+          anims.create({
+            key: "misa-front-walk",
+            frames: anims.generateFrameNames("atlas", { prefix: "misa-front-walk.", start: 0, end: 3, zeroPad: 3 }),
+            frameRate: 10,
+            repeat: -1
+          });
+          anims.create({
+            key: "misa-back-walk",
+            frames: anims.generateFrameNames("atlas", { prefix: "misa-back-walk.", start: 0, end: 3, zeroPad: 3 }),
+            frameRate: 10,
+            repeat: -1
+          });
+
+        const camera = this.cameras.main;
+        camera.startFollow(player);
+        camera.setBounds(0, 0, map.widthInPixels, map.heightInPixels);
+
         cursors = this.input.keyboard.createCursorKeys();
 
     }
 
     function update(time, delta) {
-        const speed = 175;
-        const prevVelocity = player.body.velocity.clone();
+          const speed = 175;
+          const prevVelocity = player.body.velocity.clone();
+
           // Stop any previous movement from the last frame
           player.body.setVelocity(0);
 
           // Horizontal movement
           if (cursors.left.isDown) {
-            player.body.setVelocityX(-100);
+            player.body.setVelocityX(-speed);
           } else if (cursors.right.isDown) {
-            player.body.setVelocityX(100);
+            player.body.setVelocityX(speed);
           }
 
           // Vertical movement
           if (cursors.up.isDown) {
-            player.body.setVelocityY(-100);
+            player.body.setVelocityY(-speed);
           } else if (cursors.down.isDown) {
-            player.body.setVelocityY(100);
-          }
+            player.body.setVelocityY(speed);
+            }
 
           // Normalize and scale the velocity so that player can't move faster along a diagonal
           player.body.velocity.normalize().scale(speed);
-    }
+    
+          // Normalize and scale the velocity so that player can't move faster along a diagonal
+          player.body.velocity.normalize().scale(speed);
 
-    function setup() {
-        // ...
+          // Update the animation last and give left/right animations precedence over up/down animations
+          if (cursors.left.isDown) {
+            player.anims.play("misa-left-walk", true);
+          } else if (cursors.right.isDown) {
+            player.anims.play("misa-right-walk", true);
+          } else if (cursors.up.isDown) {
+            player.anims.play("misa-back-walk", true);
+          } else if (cursors.down.isDown) {
+            player.anims.play("misa-front-walk", true);
+          } else {
+            player.anims.stop();
 
-        // This will watch the player and worldLayer every frame to check for collisions
-        this.physics.add.collider(player, foliageLayer);
-    }
+            // If we were moving, pick and idle frame to use
+            if (prevVelocity.x < 0) player.setTexture("atlas", "misa-left");
+            else if (prevVelocity.x > 0) player.setTexture("atlas", "misa-right");
+            else if (prevVelocity.y < 0) player.setTexture("atlas", "misa-back");
+            else if (prevVelocity.y > 0) player.setTexture("atlas", "misa-front");
+  }
+}
+
     </script>
 
 </body>
