Revert "reference fixes"
This reverts commit af45fee49193135a481a8e75a7f6fe5b972bc5e8.

--- a/views/index.html
+++ b/views/index.html
@@ -1,3 +1,3 @@
 <!-- lets just make like a quick launch page for the app or something here -->
 
-<a href="/views/levelOne/game.html"><h1>Click here for game</h1></a>
+<a href="/levelOne"><h1>Click here for game</h1></a>
