--- a/views/levelOne/game.html
+++ b/views/levelOne/game.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <h1>Level One!</h1>
-<div class="victory" style="display:none"><p>Congratulations! You won, click <a href="/paywallExample.html">here</a> to move on.</p></div>
+<div class="victory" style="display:none"><p>Congratulations! You won, click <a href="/paywall">here</a> to move on.</p></div>
 
-<script type="text/javascript" src="/games/levelOne.js"></script>
+<script type="text/javascript" src="/levelOne.js"></script>
 </body>
 </html>
