Added LevelOne paywall

--- a/views/index.html
+++ b/views/index.html
@@ -1,3 +1,1 @@
-<!-- lets just make like a quick launch page for the app or something here -->
-
-<a href="/levelOne"><h1>Click here for game</h1></a>
+<iframe src="/levelOne" name="game"   width="800" height="608" frameborder="0" scrolling="no" onload="this.contentWindow.focus()">   <p>Your browser does not support iframes.</p> ></iframe>
