--- a/views/levelOne/game.html
+++ b/views/levelOne/game.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>FA Studios | Level One</title>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/phaser@3.0.0/dist/phaser.min.js"></script>
+    <script type="text/javascript" src="/levelOne.js"></script>
 </head>
 <body>
-<h1>Level One!</h1>
-<div class="victory" style="display:none"><p>Congratulations! You won, click <a href="/paywall">here</a> to move on.</p></div>
-
-<script type="text/javascript" src="/levelOne.js"></script>
+<!-- <h1>Level One!</h1>
+<div class="victory" style="display:none"><p>Congratulations! You won, click <a href="/paywall">here</a> to move on.</p></div> -->
 </body>
 </html>
