--- a/views/levelOne/paywall.html
+++ b/views/levelOne/paywall.html
@@ -41,7 +41,7 @@
                   <a href="javascript:void(0)" class="eightbit-btn">Buy More Coins</a>
                 </div>
                 <div class="slide-single">
-                  <a onclick="loadCodeUnlock()" sclass="eightbit-btn eightbit-btn--proceed">Enter Unlock Code</a>
+                  <a onclick="loadCodeUnlock()" class="eightbit-btn eightbit-btn--proceed">Enter Unlock Code</a>
                 </div>
              <!--   <div class="slide-single">
                   <a href="javascript:void(0)" class="eightbit-btn">Level 4</a>
