--- a/views/levelOne/paywall.html
+++ b/views/levelOne/paywall.html
@@ -117,13 +117,32 @@
     overlayColor: 'rgba(0, 0, 0, 0.6)'
   });
 
+  $(".code-unlock-modal").iziModal({
+    overlayClose: false,
+    overlayColor: 'rgba(0, 0, 0, 0.6)'
+  });
+
 
     $('.prompt-modal').iziModal('open');
 
   function loadCodeUnlock() {
-
+    $('.code-unlock-modal').iziModal('open');
   }
 
+  function codeCorrect() {
+    $('.code.unlock-modal').iziModal('hide');
+  }
+
+var incorrectCode = document.getElementById('#codeInput').value;
+const popupAlert = document.getElementById('.popupAlert')
+
+  function codeIncorrect(incorrectCode) {
+
+    // init alert
+    console.log(incorrectCode)
+    popupAlert.innerHTML("The Code " + incorrectCode + "is incorrect. Please try again. ")
+    
+  }
 
 </script>
 
