--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3,6 +3,17 @@ body {
 	background: -webkit-linear-gradient(to right, #414345, #232526);  /* Chrome 10-25, Safari 5.1-6 */
 	background: linear-gradient(to right, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
-
+.game-container {
+	margin: auto;
+	width: 800px; 
+	height: 608px;
+	display: block;
+}
+.game-container2 {
+	margin: auto;
+	width: 350px; 
+	height: 350px;
+	display: block;
+}
 
 
