Revert "Changed styles"
This reverts commit a5d0979479edb7b9a33982f1b213df8c64d6fe81.

--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,9 @@
 	<link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
 </head>
 <body>
-	<iframe class="game-container" src="/levelOne" name="game" frameborder="0" scrolling="no" onload="this.contentWindow.focus()">   <p>Your browser does not support iframes.</p></iframe>
+	<div class="container">
+		<iframe src="/levelOne" name="game"  width="800" height="608" frameborder="0" scrolling="no" onload="this.contentWindow.focus()">   <p>Your browser does not support iframes.</p></iframe>
+	</div>
 </body>
 </html>
 
