--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div class="container">
-		<iframe src="/levelOne" name="game"  width="800" height="608" frameborder="0" scrolling="no" onload="this.contentWindow.focus()">   <p>Your browser does not support iframes.</p></iframe>
+		<iframe class="game-container" src="/levelOne" name="game" frameborder="0" scrolling="no" onload="this.contentWindow.focus()">   <p>Your browser does not support iframes.</p></iframe>
 	</div>
 </body>
 </html>
