--- a/views/levelOne/game.html
+++ b/views/levelOne/game.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/phaser@3.0.0/dist/phaser.min.js"></script>
     <script type="text/javascript" src="/levelOne.js"></script>
 </head>
 <body>
-<!-- <h1>Level One!</h1>
-<div class="victory" style="display:none"><p>Congratulations! You won, click <a href="/paywall">here</a> to move on.</p></div> -->
+<div class="heading fadeOut">LEVEL ONE</div>
 </body>
 </html>
