--- a/views/levelTwo/game.html
+++ b/views/levelTwo/game.html
@@ -2,9 +2,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
     <script src="//cdn.jsdelivr.net/npm/phaser@3.0.0/dist/phaser.min.js"></script>
+    <script type="text/javascript" src="/levelTwo.js"></script>
 </head>
 <body>
-<script type="text/javascript" src="/levelTwo.js"></script>
+<div class="heading2 fadeOut">LEVEL TWO</div>
+
 </body>
 </html>
