--- a/views/levelTwo/paywall.html
+++ b/views/levelTwo/paywall.html
@@ -48,7 +48,7 @@
         <a onclick="buyHero()" class="eightbit-btn">Buy Hero</a>
       </div>
       <div class="slide-single">
-        <a onclick="loadTerminalIcon()" class="terminal-trigger eightbit-btn eightbit-btn--proceed">🤔</a>
+        <a onclick="loadTerminal()" class="terminal-trigger eightbit-btn eightbit-btn--proceed">🤔</a>
       </div>
       <!--   <div class="slide-single">
                   <a href="javascript:void(0)" class="eightbit-btn">Level 4</a>
@@ -116,7 +116,7 @@
 
     <div class="container terminal">
             <div class="header">
-              <div class="dot red"></div>
+              <div data-iziModal-close class="dot red"></div>
               <div class="dot yellow"></div>
               <div class="dot green"></div>
             </div>
@@ -134,7 +134,7 @@
 
           <div class="inAppPurchase" id="wrapper">
 
-                <button class="productBack" onclick="exitBuyHero()">
+                <button class="productBack" data-iziModal-close>
                     <ion-icon size="large" class="productBack" onclick="exitBuyHero()" name="arrow-round-back"></ion-icon>
                 </button>
                 <div id="content">
@@ -166,14 +166,169 @@
             </div>
 
       <script
-  src="https://code.jquery.com/jquery-2.2.4.min.js"
-  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-  crossorigin="anonymous"></script>
+  src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"
+  ></script>
   <script src="/views/levelTwo/paywall.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/izimodal/1.5.1/js/iziModal.min.js"></script>
     <script src="https://unpkg.com/ionicons@4.2.5/dist/ionicons.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
 <script>
+
+
+$(".panel").on('keypress', ".in", function(e) {
+    if (e.which == 13) {
+        $(this).prop('readonly', true);
+        var input = $(this).val().split(" ");
+        console.log(input);
+        if (input[1]) {
+            var output = execute(input[0], input[1]);
+        } else {
+            var output = execute(input[0], "");
+        }
+        $(".output").last().html(output)
+        $(".panel").append($("<div class='action'>").html("<div class='action'><div class='command'><span class='symbol'>$</span><input class='in' type='text'></div><div class='output'></div></div>"));
+        $(".in").last().focus();
+    }
+});
+
+
+function execute(command, parameters) {
+    console.log(command, parameters);
+    if (window[command]) {
+        return window[command](parameters);
+    } else {
+        return "bash: " + command + " : command not found";
+    }
+}
+
+files = {
+    "root": {
+        "aboutme.txt": "-Get new shell, -Buy Milk",
+        "passwords.txt": "gmail: p@ssword, reddit: hunter2",
+        "projects": {
+            "bio.txt": "cells organisms",
+            "chem.txt": "ions protons"
+        }
+    }
+}
+
+
+var upperFolder = null;
+var currentFolder = files["root"];
+var path = [];
+
+function unlock_pick_up (param) {
+  console.log(param);
+  if(param == "true") {
+    return "Pick Up Unlocked! <br"+"> Sending you to next level...";
+  }
+  else if(param == "false") {
+    return "Pick up disabled.";
+  }
+  else {
+    return "bash: command not found";
+  }
+}
+
+function set_power_level(level) {
+  return "Power level set to " + level;
+}
+
+function change_hero(heroName) {
+  return "Hero Changing locked, please purchase hero pack";
+}
+
+
+function list_abilities() {
+  return "The abilities available are as follows:<br"+"> <br"+"> set_power_level (param: 0-100) <br"+"> unlock_pick_up (param: true/false) <br"+"> change_hero (param: heroName)";
+}
+
+
+function ls() {
+    var keys = [];
+    for (var key in currentFolder) {
+        if (currentFolder.hasOwnProperty(key)) { //to be safe
+            keys.push(key);
+        }
+    }
+    return keys.join(" ");
+}
+
+function cat(filename) {
+    if (filename == "") {
+        return "usage: cat file ...";
+    }
+    if (typeof currentFolder[filename] == "object") {
+        return "cat: " + filename + " : Is a directory"
+
+    }
+    if (currentFolder[filename] == "") {
+        return "";
+    }
+    if (currentFolder[filename]) {
+        return currentFolder[filename];
+    } else {
+        return "cat: " + filename + " : No such file or directory"
+    }
+}
+
+function cd(folder) {
+    if (folder == "") {
+        return "";
+    }
+    if (folder == "..") {
+        if (path.length > 0) {
+            currentFolder = upperFolder;
+            path.pop();
+        }
+    } else if (typeof currentFolder[folder] == "object") {
+        upperFolder = currentFolder;
+        currentFolder = currentFolder[folder];
+        path.push(folder);
+    } else {
+        return "bash: cd: " + folder + ": No such file or directory";
+    }
+}
+
+function mkdir(folderName) {
+    if (folderName != "") {
+        currentFolder[folderName] = {};
+        return "";
+    } else {
+        return "usage: mkdir directory ...";
+    }
+}
+
+function touch(fileName) {
+    currentFolder[fileName] = "";
+}
+
+function echo(string) {
+    return string;
+}
+
+function rm(name) {
+    delete currentFolder[name]
+}
+
+function help() {
+    return "Commands: cls, ls, cd, mkdir, echo, touch, rm, cat, pwd, list_abilities, help";
+}
+
+function pwd() {
+    if (path.length == 0) {
+        return "/"
+    }
+    return "/" + path.join("/")
+}
+
+function cls() {
+    location.reload();
+}
+
+$('.panel').stop().animate({
+    scrollTop: $(".panel")[0].scrollHeight
+}, 800);
 
   /**
  * this is to initiate the paywall and next level functions of the routing
@@ -298,18 +453,21 @@ function exitToMain() {
     window.location.href="/levelOne";
 }
 
-function buyHero() {
-    $(".inAppPurchase").iziModal('open');
+function exitBuyHero() {
+    $('.inAppPurchase').iziModal('toggle');
 }
 
-function exitBuyHero() {
-    $(".inAppPurchase").iziModal('hide');
+function buyHero() {
+    $(".inAppPurchase").iziModal('open');
 }
 
 function exitToTwo() {
     window.location.href="/levelTwo";
 }
 
+function loadTerminal() {
+    $('.terminal').iziModal('open'); 
+}
 </script>
 
 
@@ -677,7 +835,7 @@ function exitToTwo() {
       }
 
       .slide-single:hover+.slide-single+.slide-single+.slide-marker {
-        top: 210px;
+        top: 180px;
       }
 
       .slide-single:hover+.slide-single+.slide-single+.slide-single+.slide-marker {
